changes url of home page

--- a/school/templates/base.html
+++ b/school/templates/base.html
@@ -44,7 +44,7 @@
 <div  style="background-color: #04AA6D;">
     <center><h1>STUDENT REGISTRATION SYSTEM</h1></center>
     <ul>
-        <li><a  href="/home">Home</a></li>
+        <li><a href="{% url 'home'%}">Home</a></li>
         <li><a href="/reg">New Registrations</a></li>
         <li><a href="/existing">Registered Students</a></li>
         <li><a href="/search">Search</a></li>
