--- a/school/templates/existing.html
+++ b/school/templates/existing.html
@@ -1,5 +1,6 @@
 <html>
     {% include "base.html" %}
+    <body style="background-color: #D3D3D3;">
     <br>
     <center><h1>{{title}}</h1></center>
     <br>
@@ -27,4 +28,5 @@
         </tbody>
         {% endfor %}
     </table>
+</body>
 </html>
