--- a/school/templates/home.html
+++ b/school/templates/home.html
@@ -2,8 +2,8 @@
 <html>
 {% include "base.html" %}<!--to include the base.html-->
 
-<body style="background-color: black;">
-
+<body style="background-color: #D3D3D3;">
+    
 </body>
 </html>
 
