--- a/school/templates/register.html
+++ b/school/templates/register.html
@@ -1,5 +1,6 @@
 <html>
     {% include "base.html" %}
+    <body style="background-color: #D3D3D3;">
     <br>
     <center><h1>{{title}}</h1></center>
     <br>
@@ -10,4 +11,5 @@
             style="background-color: #04AA6D; color: whitesmoke;height: 30px;width: 100px;">Register</button>
         </form>
     </center>
+</body>
 </html>
