--- a/school/templates/base.html
+++ b/school/templates/base.html
@@ -1,4 +1,8 @@
-<head >
+{%load static%}
+<header>
+  <center><img width = '150' src="{%static 'logo.jpg'%}" alt=""></center>
+</header>
+<head>
     <style>
     ul {
       list-style-type: none;
