changed div background

--- a/school/templates/base.html
+++ b/school/templates/base.html
@@ -43,7 +43,7 @@
     }
     </style>
     </head>
-<div  style="background-color:#ADD8E6 ;">
+<div>
     <center><h1>STUDENT REGISTRATION SYSTEM</h1></center>
     <ul>
         <li><a href="{% url 'home'%}">Home</a></li>
