alternate text for logo image

--- a/school/templates/base.html
+++ b/school/templates/base.html
@@ -1,6 +1,6 @@
 {%load static%}
 <header>
-  <center><img width = '150' src="{%static 'logo.jpg'%}" alt=""></center>
+  <center><img width = '150' src="{%static 'logo.jpg'%}" alt="Logo of the System"></center>
 </header>
 <head>
     <style>
